--- a/app/src/main/res/layout/fragment_fifth_info.xml
+++ b/app/src/main/res/layout/fragment_fifth_info.xml
@@ -4,13 +4,20 @@
         android:background="#ffffff"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto">
     <RelativeLayout
             android:layout_weight="2"
-            android:background="#d8d8d8"
             android:id="@+id/info_animation1"
             android:layout_width="match_parent"
             android:layout_height="0dp">
+        <com.airbnb.lottie.LottieAnimationView
+                android:layout_centerInParent="true"
+                android:id="@+id/lottie_fifth_info"
+                app:lottie_rawRes="@raw/final_intro_1"
+                app:lottie_loop="false"
+                app:lottie_autoPlay="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
     </RelativeLayout>
     <RelativeLayout
             android:layout_weight="1"
