--- a/app/src/main/res/layout/fragment_first_info.xml
+++ b/app/src/main/res/layout/fragment_first_info.xml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-        android:orientation="vertical"
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ffffff"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:background="#ffffff">
     <RelativeLayout
             android:layout_weight="2"
             android:clickable="false"
-            android:background="#d8d8d8"
             android:id="@+id/info_animation1"
             android:layout_width="match_parent"
             android:layout_height="0dp">
+        <com.airbnb.lottie.LottieAnimationView
+                android:layout_centerInParent="true"
+                android:id="@+id/lottie_first_info"
+                app:lottie_rawRes="@raw/final_intro_1"
+                app:lottie_loop="false"
+                app:lottie_autoPlay="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -52,15 +59,12 @@
                     android:lineSpacingExtra="9sp"
                     android:layout_centerHorizontal="true"
                     android:textColor="#9e9e9e"
-                    android:text= "관심분야 기반으로\n다양한 활동을 추천해드려요"
+                    android:text="관심분야 기반으로\n다양한 활동을 추천해드려요"
             />
 
         </RelativeLayout>
 
     </RelativeLayout>
-
-
-
 
 
 </LinearLayout>
