--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -17,6 +17,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="55dp">
                 <ImageView
+                        android:id="@+id/btn_calendar_detail_close"
                         android:layout_marginLeft="15dp"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_arrow_back"
