--- a/app/src/main/res/layout/fragment_my_page.xml
+++ b/app/src/main/res/layout/fragment_my_page.xml
@@ -162,119 +162,105 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:src="@drawable/line_gradation"/>
-            <RelativeLayout
-                    android:id="@+id/btn_my_page_notice"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
+            <LinearLayout
+                    android:orientation="vertical"
+                    android:background="#f7f8f9"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
+
+                <RelativeLayout
+                        android:id="@+id/btn_my_page_notice"
+                        android:clickable="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="56dp">
+
+                    <TextView
+                            android:id="@+id/my_page_notice_text"
+                            android:clickable="false"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="공지사항"
+                            android:textColor="#616161"
+                            android:textSize="16sp"
+                            android:letterSpacing="-0.02"/>
+                    <ImageView
+                            android:clickable="false"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginRight="16dp"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_next_mypage"/>
+                </RelativeLayout>
                 <ImageView
-                        android:clickable="false"
-                        android:scaleType="fitXY"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/my_page_list_rectangle"/>
-                <TextView
-                        android:id="@+id/my_page_notice_text"
-                        android:clickable="false"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="24dp"
+                        android:layout_height="1dp"
+                        android:background="#e0e0e0"/>
+                <RelativeLayout
+                        android:id="@+id/btn_my_page_push_setting"
+                        android:clickable="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="공지사항"
-                        android:textColor="#616161"
-                        android:textSize="16sp"
-                        android:letterSpacing="-0.02"/>
+                        android:layout_height="56dp">
+                    <TextView
+                            android:id="@+id/my_page_alarm_text"
+                            android:clickable="false"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="푸시 알림 설정"
+                            android:textColor="#616161"
+                            android:textSize="16sp"
+                            android:letterSpacing="-0.02"/>
+                    <ImageView
+                            android:clickable="false"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginRight="16dp"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_next_mypage"/>
+                </RelativeLayout>
                 <ImageView
-                        android:clickable="false"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="16dp"
-                        android:layout_centerVertical="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_next_mypage"/>
-            </RelativeLayout>
-            <ImageView
-                    android:scaleType="fitXY"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/line"/>
-            <RelativeLayout
-                    android:id="@+id/btn_my_page_push_setting"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                <ImageView
-                        android:clickable="false"
-                        android:scaleType="fitXY"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/my_page_list_rectangle"/>
-                <TextView
-                        android:id="@+id/my_page_alarm_text"
-                        android:clickable="false"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="24dp"
+                        android:layout_height="1dp"
+                        android:background="#e0e0e0"/>
+                <RelativeLayout
+                        android:id="@+id/btn_my_page_account_management"
+                        android:clickable="true"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="푸시 알림 설정"
-                        android:textColor="#616161"
-                        android:textSize="16sp"
-                        android:letterSpacing="-0.02"/>
+                        android:layout_height="56dp">
+
+                    <TextView
+                            android:id="@+id/my_page_account_text"
+                            android:clickable="false"
+                            android:layout_centerVertical="true"
+                            android:layout_marginLeft="24dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="계정관리"
+                            android:textColor="#616161"
+                            android:textSize="16sp"
+                            android:letterSpacing="-0.02"/>
+                    <ImageView
+                            android:clickable="false"
+                            android:layout_alignParentEnd="true"
+                            android:layout_marginRight="16dp"
+                            android:layout_centerVertical="true"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/ic_arrow_next_mypage"/>
+                </RelativeLayout>
                 <ImageView
-                        android:clickable="false"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="16dp"
-                        android:layout_centerVertical="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_next_mypage"/>
-            </RelativeLayout>
-            <ImageView
-                    android:scaleType="fitXY"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/line"/>
-            <RelativeLayout
-                    android:id="@+id/btn_my_page_account_management"
-                    android:clickable="true"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                <ImageView
-                        android:clickable="false"
-                        android:scaleType="fitXY"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/my_page_list_rectangle"/>
-                <TextView
-                        android:id="@+id/my_page_account_text"
-                        android:clickable="false"
-                        android:layout_centerVertical="true"
-                        android:layout_marginLeft="24dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="계정관리"
-                        android:textColor="#616161"
-                        android:textSize="16sp"
-                        android:letterSpacing="-0.02"/>
-                <ImageView
-                        android:clickable="false"
-                        android:layout_alignParentEnd="true"
-                        android:layout_marginRight="16dp"
-                        android:layout_centerVertical="true"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:src="@drawable/ic_arrow_next_mypage"/>
-            </RelativeLayout>
-            <ImageView
-                    android:scaleType="fitXY"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/line"/>
-            <ImageView
-                    android:scaleType="fitXY"
-                    android:layout_width="match_parent"
-                    android:layout_height="131dp"
-                    android:src="@drawable/my_page_list_rectangle"/>
+                        android:layout_height="1dp"
+                        android:background="#e0e0e0"/>
+
+            </LinearLayout>
+
+
         </LinearLayout>
     </ScrollView>
 
